<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/textView_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/cotta"
        android:text="@string/text_title"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/band_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_Add"
        app:srcCompat="@drawable/vector_1" />

    <LinearLayout
        android:layout_width="330sp"
        android:layout_height="741sp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="44dp"
        android:orientation="vertical"
        android:padding="20sp"
        android:background="@drawable/sff191919sw3bffffffff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Add">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="47dp"
            android:layout_marginEnd="50sp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/imageButton2_add"
                android:layout_width="59dp"
                android:layout_height="55dp"
                android:layout_marginEnd="20dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/imagebutton_poem"
                app:srcCompat="@drawable/vector__1_" />

            <TextView
                android:id="@+id/textView5_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/playfair_display_sc"
                android:text="@string/titletext_poem"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_add"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagepol_poem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Basic"
            app:srcCompat="@drawable/vector_1" />

        <TextView
            android:id="@+id/textView8_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_sc"
            android:text="@string/titlepoem_add2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6_add"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginTop="10sp"
            android:fontFamily="@font/playfair_display_sc"
            android:text="@string/titlepoem_add"
            android:textColor="#C4000000"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imageView_add2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/imagepol_poem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_Basic"
            app:srcCompat="@drawable/vector_1" />

        <TextView
            android:id="@+id/textView9_add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display_sc"
            android:text="@string/textmain_add2"
            android:textColor="#000000"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView7_add"
            android:layout_width="match_parent"
            android:layout_height="370dp"
            android:layout_marginTop="15sp"
            android:fontFamily="@font/playfair_display_sc"
            android:text="@string/textmain_poem"
            android:textColor="#C4000000"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"/>

        <Button
            android:id="@+id/button_add"
            style="@style/BlackButtonStyle"
            android:layout_width="200dp"
            android:layout_height="50sp"
            android:layout_marginStart="80sp"
            android:layout_marginTop="50sp"
            android:fontFamily="@font/playfair_display_sc"
            android:text="@string/button_add"
            android:textSize="15sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>