<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputActivity">

    <TextView
        android:id="@+id/textViewTitle_reglog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/cotta"
        android:text="@string/text_title"
        android:textColor="#000000"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewTitle_reglog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/band_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle_reglog"
        app:srcCompat="@drawable/vector_1" />

    <TextView
        android:id="@+id/textViewRegister_reglog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/playfair_display_sc"
        android:text="@string/title_firstpage2"
        android:textColor="#C9272727"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/textViewInput_reglog"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTitle_reglog" />

    <TextView
        android:id="@+id/textViewInput_reglog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="128dp"
        android:fontFamily="@font/playfair_display_sc"
        android:text="@string/title_firstpage"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTitle_reglog" />

    <Button
        android:id="@+id/button_input_reglog"
        style="@style/BlackButtonStyle"
        android:layout_width="310sp"
        android:layout_height="60sp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/playfair_display_sc"
        android:text="@string/button_input"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_register_reglog" />

    <Button
        android:id="@+id/button_register_reglog"
        style="@style/BlackButtonStyle"
        android:layout_width="310sp"
        android:layout_height="60sp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="112dp"
        android:fontFamily="@font/playfair_display_sc"
        android:text="@string/button_firstpage"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegister_reglog" />

</androidx.constraintlayout.widget.ConstraintLayout>